docker-frontend-backend-db/Manifest/deployment.yaml
#FRONTEND
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-web-deploy
  namespace: dev
  labels:
    app: frontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-deployment
  template:
    metadata: 
      labels:
        app: frontend-deployment
    spec:
      containers:
        - name: frontend-deployment
          image: nhhduong112/fe
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-deploy
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-deploy
  template:
    metadata:
      labels:
        app: backend-deploy
    spec:
      containers:
      - name: backend-deploy
        image: nhhduong112/be
        resources:
          requests: #
            cpu: 20m #
        ports:
        - containerPort: 3001
