docker-frontend-backend-db/Manifest/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: todo-frontend-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: frontend-deployment
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 3000
      nodePort: 30008
---
apiVersion: v1
kind: Service
metadata: 
  name: todo-backend-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: backend-deploy
  ports:
    - protocol: TCP
      port: 4444
      targetPort: 3001
      nodePort: 30004
