docker-frontend-backend-db/Manifest/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: dev
spec:
  rules:
  - host: todo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-deployment
            port:
              number: 8080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-deploy
            port:
              number: 8081
